30 Jan 2006 mipsator
 * pmk now inform when compiler has not been detected before checking
   for shared library support.

19 Jan 2006 mipsator
 * some temporary fixes for pmkcfg.sh portability. Better fixes will
   come further ...

16 Jan 2006 mipsator
 * fixed pmkcfg.sh to correctly set library flags.
 * added isnan() and seteuid() functions in pmkcfg.sh for failing
   architectures.

13 Jan 2006 mipsator
 * fixed missing tokens in detect_cpu.c for kw_pmkcpu.
 * fixed CPP substitution in pmkcfg.sh script.

# snapshot 20051215

14 Dec 2005 mipsator
 * improved template tag substitution in pmk.

13 Dec 2005 mipsator
 * improved c++ file parser for pmkscan.

09 Dec 2005 mipsator
 * added more support for c++.
 * added advanced tags for config tools and pkg-config.

07 Dec 2005 mipsator
 * fixed C++ flag setting in pmkscan.

05 Dec 2005 mipsator
 * added more data in pmkscan database.

04 Dec 2005 mipsator
 * small fix for parse_lang in prs_c_file().

30 Nov 2005 mipsator
 * fixed missing include for intmax_t in compat, noticed by veins.
 * added few more advanced tags in pmk.
 * added alternate pmkfile name support in pmkscan script.
 * added support for inclusion of third party file content into pmkscan
   generated makefile.
 * added some recursive target stuff to prepare multiple generation.

24 Nov 2005 mipsator
 * fixed extra define in pmkscan generated config file.
 * fixed lower in gen_tag().
 * started to add advanced tags.

22 Nov 2005 mipsator
 * improved distclean target in generated makefile.

19 Nov 2005 mipsator
 * fixed pmkfile, pmkcfg.sh and compat.
 * polished a bit func.c.

17 Nov 2005 mipsator
 * added basic distclean target in generated makefile and started to
   prepare for advanced tags support.

10 Nov 2005 mipsator
 * added use of new tags functions in pmk.

# snapshot 0.9.3-s4

05 Nov 2005 mipsator
 * finished basic tag support in pmkscan for config file generation.
 * added pmksyntax.5 manual page to give a common overview of PMK basic